# efficientsam3

./: .gitignore  AGENT_CONTEXT.md  BENCHMARK_README.md  Benchmark_ablation_sam3_litetext.md  README.md  README_dataset.md  README_stage1.md  README_stage1_finetune.md  README_stage1_geometry_finetune.md  README_stage2.md  README_stage3.md  RELEASE_v0.4.0.md  benchmark_sam3.1.md  compare_complexity.py  pyproject.toml  sam3_workflow_drawio_style.html
data/: download_sa_v.sh  reorg_sa1b.py  reorg_sav.py  sa-v-1p.txt  sa-v.txt
data_engine/: README.md  __init__.py  annotations.py  audit.py  backfill_short_labels.py  build_manifest.py  compute_quality_stats.py  generate.py  sample_threshold_examples.py  visualize_sa1b.py
docs/: README.md  RTX5090_IMAGE_ENCODER_DISTILLATION.md  RUN_RECORD_L40S_IMAGE_DISTILL_SMOKE.md  _config.yml  documentation.html  documentation.md  few_shot_adapter_detection_design.md  fewshot_gpu_validation_guide.md  index.html  index.md  models.html  models.md
ef3_tracking/: README.md  __init__.py  config.py  demo.py  manual_tracker.py  pipeline.py  prompts.py  text_tracker.py  tracker.py  video_io.py  visualization.py
eval/: eval_coco.py  eval_coco_both_student_encoders.sh  eval_coco_examples.py  eval_coco_image_encoder_only.sh  eval_coco_single.py  eval_coco_stage3_sacap.sh
fewshot_adapter/: __init__.py  convert_datatrain.py  train_native_efficientsam3_fewshot.py
fewshot_lora/: __init__.py  cli.py  config.py  dataset.py  datatrain.py  errors.py  geometry.py  inference.py  loop.py  postprocess.py  preprocess.py  reports.py  runner.py  training.py  types.py
sam3/: __init__.py
scripts/: preflight_image_encoder_distill.sh  run_image_encoder_distill_smoke.sh
stage1/: config.py  convert_both_encoders_weights_stage1.py  convert_image_encoder_weights_stage1.py  convert_text_encoder_weights_stage1.py  debug_text_encoder_outputs.py  lr_scheduler.py  model.py  save_embedding_image_stage1.py  save_embedding_text_stage1.py  train_image_encoder_stage1.py  train_text_encoder_stage1.py  utils.py
stage1_geometry_finetune/: __init__.py  config.py  convert_finetuned_weights.py  logger.py  losses.py  lr_scheduler.py  model.py  my_meter.py  optimizer.py  train_geometry_finetune.py  train_stage1_geometry_finetune.py  utils.py
stage2/: extract_features_stage2.py  train_stage2.py  (+1 more)
(+249 files in other folders)
